--- a/ChatWeb/chat-app/src/app/pages/auth/auth.component.html
+++ b/ChatWeb/chat-app/src/app/pages/auth/auth.component.html
@@ -1,4 +1,4 @@
-<div class="parent">
+<div class="parent" *ngIf="!isForgotPasswordRoute && !isChangePasswordRoute ">
   <div class="container">
     <input type="checkbox" id="flip">
     <div class="cover">
@@ -10,15 +10,15 @@
       </div>
     </div>
     <div class="forms">
-      <div class="form-content">
-        <div class="login-form">
-          <div class="title">Login</div>
+        <div class="form-content">
+          <div class="login-form">
+            <div class="title">Login</div>
           <form action="#" [formGroup]="loginForm">
             <div class="input-boxes">
               <div class="box-container">
                 <div class="input-box">
                   <i class="fa-regular fa-envelope"></i>
-                  <input type="email" formControlName="email" placeholder="Email">
+                  <input type="email" formControlName="email" placeholder="Email"> 
                 </div>
                 <div class="error">
                   <small *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched">
@@ -30,18 +30,17 @@
               <div class="box-container">
                 <div class="input-box">
                   <i class="fa-regular fa-lock"></i>
-                  <input type="password" formControlName="password" placeholder="Password">
+                  <input type="password" formControlName="password" placeholder="Password">               
                 </div>
                 <div class="error">
                   <small *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched">
                     <span *ngIf="loginForm.controls['password'].errors?.['required']">Password is required</span>
-                    <span *ngIf="loginForm.controls['password'].errors?.['minlength']">Password must be at least 6
-                      characters</span>
+                    <span *ngIf="loginForm.controls['password'].errors?.['minlength']">Password must be at least 6 characters</span>
                   </small>
-                </div>
+                </div>  
               </div>
               <div class="form-footer">
-                <div class="text"><a href="#">Forgot password?</a></div>
+                <div class="forgotpass text"><a (click)="onForgotPassWord()">Forgot password?</a></div>
                 <div class="form-check">
                   <input class="form-check-input text" type="checkbox" id="autoSizingCheck2">
                   <label class="form-check-label " for="autoSizingCheck2">
@@ -54,15 +53,15 @@
               </div>
               <div class="text sign-up-text">Don't have an account? <label for="flip">Sigup now</label></div>
             </div>
-          </form>
-        </div>
+        </form>
+      </div>
         <div class="signup-form">
           <div class="title">Signup</div>
-          <form action="#" [formGroup]="registerForm">
+        <form action="#" [formGroup]="registerForm">
             <div class="input-boxes">
               <div class="box-container">
                 <div class="input-box">
-                  <input type="text" formControlName="name" placeholder="Enter your name">
+                  <input type="text" formControlName="name" placeholder="Enter your name">                 
                 </div>
                 <div class="error">
                   <small *ngIf="registerForm.controls['name'].invalid && registerForm.controls['name'].touched">
@@ -73,7 +72,7 @@
               <div class="box-container">
                 <div class="input-box">
                   <input type="email" formControlName="email" placeholder="Enter your email">
-                </div>
+                </div> 
                 <div class="error">
                   <small *ngIf="registerForm.controls['email'].invalid && registerForm.controls['email'].touched">
                     <span *ngIf="registerForm.controls['email'].errors?.['required']">Email is required</span>
@@ -88,8 +87,7 @@
                 <div class="error">
                   <small *ngIf="registerForm.controls['password'].invalid && registerForm.controls['password'].touched">
                     <span *ngIf="registerForm.controls['password'].errors?.['required']">Password is required</span>
-                    <span *ngIf="registerForm.controls['password'].errors?.['minlength']">Password must be at least 6
-                      characters</span>
+                    <span *ngIf="registerForm.controls['password'].errors?.['minlength']">Password must be at least 6 characters</span>
                   </small>
                 </div>
               </div>
@@ -98,9 +96,12 @@
               </div>
               <div class="text sign-up-text">Already have an account? <label for="flip">Login now</label></div>
             </div>
-          </form>
-        </div>
-      </div>
+      </form>
+    </div>
+    </div>
     </div>
   </div>
 </div>
+
+<router-outlet *ngIf="isForgotPasswordRoute"></router-outlet>
+<router-outlet *ngIf="isChangePasswordRoute"></router-outlet>
