--- a/ChatWeb/chat-app/src/app/pages/profile/profile.component.html
+++ b/ChatWeb/chat-app/src/app/pages/profile/profile.component.html
@@ -1,11 +1,14 @@
 <div class="main-body">
     <div class="row">
       <div class="d-flex flex-column align-items-center text-center">
-        <img [src]="user.avatarUrl" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
-        <div class="mt-3">
-          <h4>{{ user.name }}</h4>
-          <p class="text-muted font-size-sm">{{ user.address }}</p>
+        <div *ngIf="user">
+          <img [src]="user.avatarUrl || defaultAvatarUrl" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
+          <div class="mt-3">
+            <h4>{{ user.name }}</h4>
+            <!-- <p class="text-muted font-size-sm">{{ user.address }}</p> -->
+          </div>
         </div>
+        
       </div>
   
       <div class="card" [formGroup]="infoChangeForm">
